--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <body>
     <h1 id="titleHeader">Etch-A-Sketch</h1>
     <div id="buttonsDiv">
-      <button type="button">SELECT SIZE</button>
-      <button type="button">CLEAR</button>
-      <button type="button">RAINBOW</button>
+      <button type="button" class="button-30">SELECT SIZE</button>
+      <button type="button" class="button-30">CLEAR</button>
+      <button type="button" class="button-30">RAINBOW</button>
     </div>
     <div id="EASDiv"></div>
     <script src="scrips.js"></script>
