Added id to select size button.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   <body>
     <h1 id="titleHeader">Etch-A-Sketch</h1>
     <div id="buttonsDiv">
-      <button type="button" class="button-30">SELECT SIZE</button>
+      <button type="button" class="button-30" id="selectSize">
+        SELECT SIZE
+      </button>
       <button type="button" class="button-30">CLEAR</button>
       <button type="button" class="button-30">RAINBOW</button>
     </div>
