Changed id from EASDiv to container.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <button type="button" class="button-30">CLEAR</button>
       <button type="button" class="button-30">RAINBOW</button>
     </div>
-    <div id="EASDiv"></div>
+    <div id="container"></div>
     <script src="scrips.js"></script>
   </body>
 </html>
