Changed rainbow button to eraser button.

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       <button type="button" class="button-30" id="selectSize">
         SELECT SIZE
       </button>
-      <button type="button" class="button-30">CLEAR</button>
-      <button type="button" class="button-30">RAINBOW</button>
+      <button type="button" class="button-30" id="clearButton">CLEAR</button>
+      <button type="button" class="button-30" id="eraserButton">ERASER</button>
     </div>
     <div id="container"></div>
     <script src="scrips.js"></script>
